# DSC

./: .env.example  .gitignore  App.tsx  README.md  generate_pdf.mjs  index.html  index.tsx  leetcode_problems.csv  metadata.json  organize_leetcode.py  package-lock.json  package.json  setup.py  tauri-api.ts  verify_google_creds.py  vite-env.d.ts  vite.config.mjs
components/: DynamicIsland.tsx  GlobalWidgets.tsx  MermaidBlock.tsx
components/chat/: ChatMessage.tsx  ChatPage.tsx  ChatSidebar.tsx
components/dashboard/: AISummaryCard.tsx  DetailModal.tsx  NewsCard.tsx  (+7 more)
hooks/: useFavoriteModels.ts  usePlaylistLoader.ts  useSettings.ts
lib/: chatTypes.ts  chatUtils.ts  constants.ts
services/: brainAiService.ts  chatService.ts
src-tauri/: Cargo.toml  build_log.txt  errors.txt  rust_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/intent/: activity.rs  activity_tracker.rs  chat.rs  dashboard.rs  db.rs  diary.rs  file_monitor.rs  mod.rs  screen_capture.rs  settings.rs  storage.rs  windows_utils.rs
src-tauri/src/models/: mod.rs  settings.rs
src-tauri/src/services/: query_engine.rs
src-tauri/src/utils/: config.rs
store/: useCodeStore.ts  useIntentStore.ts  useLeetCodeActivityStore.ts  useMusicStore.ts  useNavStore.ts  useScheduleStore.ts  useTimerStore.ts
views/: ActivityView.tsx  BrainView.tsx  ChatView.tsx  CodeView.tsx  DashboardView.tsx  DiaryView.tsx  MusicApp.css  MusicView.tsx  NotesView.tsx  ScheduleView.tsx  SettingsView.tsx  TrayPanelView.tsx  ZenView.tsx
(+8 files in other folders)
